@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2004/06/27 13:34:24 grant Exp $
+# $NetBSD: Makefile,v 1.16 2004/11/19 19:15:46 jdolecek Exp $
 
-DISTNAME=	hpijs-1.5
-PKGREVISION=	1
+DISTNAME=	hpijs-1.7.1
+PKGREVISION=	# empty
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=hpinkjet/}
 
